# rust-bing

./: .gitignore  Cargo.toml  README.md  build.sh
resources/: Info.plist
src/: main.rs
